force-app/main/default/objects/Address_Mapping__c/Address_Mapping__c.object-meta.xml
<CustomObject>
    <label>Address Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>