force-app/main/default/objects/Address_Mapping__c/fields/Country_Field__c.field-meta.xml
<CustomField>
    <fullName>Country_Field__c</fullName>
    <description>The full field API name including the namespace.</description>
    <inlineHelpText>The full field API name including the namespace.</inlineHelpText>
    <label>Country Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>