force-app/main/default/objects/Address_Mapping__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the address mapping is enabled or not.</description>
    <inlineHelpText>Whether the address mapping is enabled or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>