force-app/main/default/objects/Address_Mapping__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>The full object API name including the namespace.</description>
    <inlineHelpText>The full object API name including the namespace.</inlineHelpText>
    <label>Object API Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>