force-app/main/default/objects/Address_Mapping__c/fields/Postal_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Field__c</fullName>
    <description>The full field API name including the namespace.</description>
    <inlineHelpText>The full field API name including the namespace.</inlineHelpText>
    <label>Postal Code Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>