force-app/main/default/objects/Address_Mapping__c/fields/State_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Field__c</fullName>
    <description>The full field API name including the namespace.</description>
    <inlineHelpText>The full field API name including the namespace.</inlineHelpText>
    <label>State Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>